#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.20 released.

        * MORE Misc bug fixes to socket output processing.

        * Implemented printf printing of download progress.

        * Cleaned up logging.


2010-07-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.19 released.

        * MORE Misc bug fixes to socket output processing.


2010-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.18 released.

        * Misc bug fixes to socket output processing.


2010-07-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.17 released.

        * Added line to unset environment DISPLAY setting in
          forked processes


2010-07-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.16 released.

        * Fixed cygwin output fetching from socket bugs


2010-07-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.15 released.

        * Fixed setgid build and runtime bugs


2010-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.14 released.

        * Modifed Makefile.PL to install setuid, and setgid
          configurations


2010-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.13 released.

        * Modified Build to compile C Wrapper fullauto(.exe)
          to fullauto.pl to use with setuid 


2009-07-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.12 released.

        * Repaired ability to run multi-line commands
