@@ -33,7 +33,7 @@ package Net::FullAuto;
 #
 ################################################################
 
-our $VERSION='0.20';
+our $VERSION='0.21';
 use 5.002;
 
 BEGIN {
